--- a/server/impl/package.json
+++ b/server/impl/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "timesheet",
+  "name": "timesheet-server-impl",
   "version": "0.0.0",
-  "description": "",
+  "description": "Timesheet server implementation",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
