--- a/client/bower.json
+++ b/client/bower.json
@@ -3,10 +3,11 @@
   "dependencies": {
     "angularjs": "~1.4.4",
     "angular-i18n": "~1.4.4",
+    "angular-input-masks": "~2.1.0",
     "angular-loading-bar": "~0.8.0",
     "angular-route": "~1.4.4",
-    "ngSticky": "~1.7.9",
     "bootstrap": "~3.3.5",
-    "moment": "~2.10.6"        
+    "moment": "~2.10.6",
+    "ngSticky": "~1.7.9"    
   }
 }
