--- a/client/bower.json
+++ b/client/bower.json
@@ -8,9 +8,10 @@
     "angular-loading-bar": "~0.8.0",
     "angular-route": "~1.4.4",
     "bootstrap": "~3.3.5",
+    "font-awesome": "~4.4.0",
     "moment": "~2.10.6",
     "ngSticky": "~1.7.9",
     "lodash": "~3.10.1",
-    "font-awesome": "~4.4.0"
+    "angular-search-box": "~1.0.0"
   }
 }
